--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "mapbox-gl": "^1.9.0",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
+    "react-canvas-draw": "^1.1.1",
     "react-dom": "^16.12.0",
     "react-mapbox-gl": "^4.8.3",
     "react-particles-js": "^2.7.0",
