--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.0",
     "antd": "^4.0.4",
+    "axios": "^0.21.1",
     "babel-plugin-import": "^1.13.0",
     "connected-react-router": "^6.8.0",
     "customize-cra": "^0.9.1",
