--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11",
-    "spotcrime": "^2.0.1"
+    "morgan": "~1.9.1"
   },
   "devDependencies": {
     "@useoptic/cli": "^7.0.10",
