--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "Improve your handwriting",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "plotly.js": "^1.58.4",
+    "react-plotly.js": "^2.5.1",
     "request": "^2.88.2"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo Testing Not Implemented",
     "start": "yarn --cwd backend start & yarn --cwd frontend start",
-    "setup" : "yarn --cwd backend install && yarn --cwd frontend install"
+    "setup": "yarn --cwd backend install && yarn --cwd frontend install"
   },
   "repository": {
     "type": "git",
